--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 attrs==25.4.0
 backoff==2.2.1
 bcrypt==5.0.0
+blinker==1.9.0
 build==1.3.0
 cachetools==6.2.4
 certifi==2025.11.12
@@ -13,7 +15,9 @@ coloredlogs==15.0.1
 distro==1.9.0
 durationpy==0.10
 exceptiongroup==1.3.1
+fastapi==0.128.0
 filelock==3.19.1
+flask==3.1.2
 flatbuffers==25.12.19
 fsspec==2025.10.0
 google-auth==2.45.0
@@ -30,6 +34,7 @@ humanfriendly==10.0
 idna==3.11
 importlib-metadata==8.7.1
 importlib-resources==6.5.2
+itsdangerous==2.2.0
 jinja2==3.1.6
 joblib==1.5.3
 jsonschema==4.25.1
@@ -83,6 +88,7 @@ sentence-transformers==5.1.2
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+starlette==0.49.3
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
@@ -101,4 +107,5 @@ uvloop==0.22.1
 watchfiles==1.1.1
 websocket-client==1.9.0
 websockets==15.0.1
+werkzeug==3.1.4
 zipp==3.23.0
